# model-parser

./: .gitignore  AGENTS.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api.md  index.md
docs/chatlogs/: 2026-06-01_bootstrap-model-parser.md  2026-06-01_ci-mkdocs-github-pages-pypi.md  2026-06-01_docs-pipx-pypi-install.md  2026-06-02_model-library-docs-diff-bump.md  2026-06-03_docs-todo-backlog-mkdocs.md  2026-06-03_julia-rhs-emit-and-library-sync.md
docs/decisions/: 0001-python-cli-with-julia-backend.md  0002-codegen-over-serialized-system.md  0003-explicit-expression-ir.md  0004-target-mtk-v11-idioms.md  0005-cli-verbs-parse-emit.md  0006-julia-numerical-rhs-view.md  index.md
docs/deployment/: ci-cd.md
docs/design/: ir-specification.md  language-strategy.md  model-library-and-versioning.md  model-parser.md  storing-mtk-models.md
docs/release-notes/: README.md
docs/todo/: conformance-fixtures-parity.md  diff-bump-hardening.md  emit-cpp-realtime-backend.md  emit-ini-round-trip.md  index.md  ini-dimensions-inference.md  ir-schema-migrations.md  parameter-set-contract-cli.md
examples/: README.md  run.sh
examples/models/: model_monod_simple.ini  model_thermal_tank.ini
julia/ModelParserJL/: Project.toml  README.md
julia/ModelParserJL/src/: ModelParserJL.jl
schemas/: canonical-ir.schema.json
src/model_parser/: __init__.py  cli.py  io.py  schema.py  semantic_diff.py
tests/: conftest.py  test_cli.py  test_expr_parser.py  test_exprtk_ini.py  test_julia_mtk.py  test_julia_rhs.py  test_semantic_diff.py
(+12 files in other folders)
