[project]
name = "apc-model-parser"
version = "0.2.2"
description = "Convert process-model definitions to and from a canonical intermediate representation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Advanced Process Control" }]
keywords = ["process-model", "intermediate-representation", "modelingtoolkit", "exprtk", "codegen"]

# Dependencies are managed by `uv add` / `uv remove`; do not hand-edit.
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
]

[project.scripts]
model-parser = "model_parser.cli:run"

[project.urls]
Repository = "https://github.com/Advanced-Process-Control/model-parser"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/model_parser"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Typer's CLI idiom requires function calls (typer.Argument/Option) in defaults.
"src/model_parser/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
